# SalesPredict

./: .gitattributes  .gitignore  AGENTS.md  README.md  skills-lock.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  predictions.py  sales.py  ws.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/domain/entities/: sale.py
backend/app/domain/value_objects/: time_range.py
backend/app/infrastructure/db/: session.py
backend/app/infrastructure/db/models/: __init__.py  base.py  sale.py  user.py
backend/app/infrastructure/repositories/: sale_repo.py  user_repo.py
backend/app/schemas/: auth.py  prediction.py  sale.py
backend/app/services/: auth_service.py  insights_service.py  prediction_service.py  sales_service.py
backend/app/tasks/: __init__.py  etl_tasks.py  prediction_tasks.py  training_tasks.py
backend/scripts/: seed_data.py  test_aggregates.py  test_db.py  test_login.py  test_sales_list.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_live.py  test_sales_api.py
backend/tests/unit/: test_sale_repo.py  test_schemas.py  test_user_repo.py
commands/: super-commit.md
docker/: docker-compose.yml
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/predictions/: page.tsx
frontend/app/(dashboard)/sales/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/app/login/: page.tsx
frontend/components/dashboard/: forecast-chart.tsx  insights-panel.tsx  inventory-recommendations.tsx  kpi-card.tsx  prediction-chart.tsx  sales-table.tsx
frontend/components/layout/: auth-guard.tsx  sidebar.tsx  top-bar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  radio.tsx  tooltip.tsx
frontend/lib/: api-client.ts  auth.ts
frontend/lib/hooks/: usePredictions.ts  useSales.ts  useWebSocket.ts
ml-pipelines/: Dockerfile  pyproject.toml
ml-pipelines/config/: ml_config.py
ml-pipelines/data/: etl_pipeline.py
ml-pipelines/inference/: model_registry.py  predictor.py
ml-pipelines/training/: feature_engineering.py  hyperparameter_tuning.py  train_xgboost.py
running-dashboard-video/: index.html  meta.json  package.json
salespredict-promo-video/: index.html  meta.json  package.json
salespredict-promo-video/renders/work-c40f0d12-af07-4364-9b36-fff27435b5d9/compiled/: index.html
scripts/: init_timescaledb.sql  test_backend_api.py
