[tool.poetry]
name = "salespredict-backend"
version = "0.1.0"
description = "FastAPI async backend for SalesPredict AI CRM"
authors = ["SalesPredict Team <team@salespredict.ai>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.111.0"}
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
psycopg = {extras = ["binary"], version = "^3.1.0"}
alembic = "^1.13.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
celery = "^5.4.0"
redis = "^5.0.0"
qdrant-client = "^1.9.0"
httpx = "^0.27.0"
websockets = "^12.0"
orjson = "^3.10.0"

# ML dependencies for model inference & feature engineering
xgboost = "^2.0.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
mlflow = "^2.13.0"
groq = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
aiosqlite = "^0.20.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
