[tool.poetry]
name = "salespredict-ml"
version = "0.1.0"
description = "ML training and inference pipelines for SalesPredict AI CRM"
authors = ["SalesPredict Team <team@salespredict.ai>"]
readme = "README.md"
packages = [{include = "training"}, {include = "inference"}, {include = "data"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.0"
xgboost = "^2.0.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
mlflow = "^2.13.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
joblib = "^1.4.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
